--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body{
     font-weight: 400;
 }
 .task button{
-    background-color: #6583e5;
+    background-color: #65e59a;
     color: #ffffff;
     border: none;
     cursor: pointer;
@@ -91,4 +91,13 @@ body{
     height: 100%;
     width: 40px;
     border-radius: 5px;
+}
+h1{
+    color:yellow;
+    text-align: center;
+    font-family: 'Poppins',sans-serif;
+    font-size: 36;
+    top: 50%;
+    height: 50%;
+   
 }
